--- a/src/jade/_partials/_head.jade
+++ b/src/jade/_partials/_head.jade
@@ -20,14 +20,14 @@ mixin head(pageTitle, pageDescription)
 			// 	meta(name="description", content=pageDescription)
 			
 			// Styles
-			link(href="../_css/style.min.css", rel="stylesheet")
+			link(href="../../_css/style.min.css", rel="stylesheet")
 			link(href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700&display=swap",rel="stylesheet")
 			
 			// Icons
-			link(rel="apple-touch-icon", sizes="180x180", href="../_img/apple-touch-icon.png")
-			link(rel="icon", type="image/png", sizes="32x32", href="../_img/favicon-32x32.png")
-			link(rel="icon", type="image/png", sizes="16x16", href="../_img/favicon-16x16.png")
-			link(rel="mask-icon", href="../_img/safari-pinned-tab.svg", color="#fa8072")
+			link(rel="apple-touch-icon", sizes="180x180", href="../../_img/apple-touch-icon.png")
+			link(rel="icon", type="image/png", sizes="32x32", href="../../_img/favicon-32x32.png")
+			link(rel="icon", type="image/png", sizes="16x16", href="../../_img/favicon-16x16.png")
+			link(rel="mask-icon", href="../../_img/safari-pinned-tab.svg", color="#fa8072")
 			
 			// Web appification
 			meta(name="theme-color", content="#959ba6")
