--- a/src/jade/contribute-data-or-publications/success/index.jade
+++ b/src/jade/contribute-data-or-publications/success/index.jade
@@ -15,5 +15,5 @@ body.join-page.contribute-page
 		section
 			.container
 				h2 Successful Submission 
-				p Your submission has been recieved.
+				p Your submission has been received.
 	+footer()
