--- a/src/jade/join-as-a-patient/success/index.jade
+++ b/src/jade/join-as-a-patient/success/index.jade
@@ -4,7 +4,7 @@ include ../../_partials/_svg
 include ../../_partials/_icon
 include ../../_partials/_footer
 
-+head("Sucessful submission")
++head("Successful submission")
 body.join-page.join-as-a-patient-page
 	+header()
 	section.page-hero
@@ -14,5 +14,5 @@ body.join-page.join-as-a-patient-page
 		section
 			.container
 				h2 Successful Application 
-				p Your submission has been recieved.
+				p Your submission has been received.
 	+footer()
