--- a/src/jade/_partials/_nav.jade
+++ b/src/jade/_partials/_nav.jade
@@ -13,9 +13,8 @@ mixin nav()
 								+icon("dchev") 
 							ul.nav-subgroup
 								li.nav-item
-									a.nav-link(href="https://brainsurvey.org") 
+									a.nav-link(href="/brainsurvey") 
 										span Brain Survey
-										+icon("external")
 								li.nav-item
 									a.nav-link(href="/open-data-sets") 
 										span Open Data Sets
