--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -897,6 +897,7 @@ header {
 	border-radius: var(--radius);
 	cursor: pointer;
 	padding: var(--small) var(--medium);
+	margin: var(--medium) 0 0;
 
 	&:hover {
 		background: rgba($black, 0.6);
@@ -920,25 +921,49 @@ header {
 	}
 }
 
-// Stroke -----------------------
-.show-stroke-filter {
-	.page-content li:not(.stroke-publication) {
+.show-brain-tumor-pub,
+.show-stroke-pub,
+.show-tbi-pub,
+.show-craniotomy-pub,
+.show-tdcs-pub,
+.show-vision-pub,
+.show-language-pub,
+.show-action-pub {
+	li {
 		display: none;
 	}
 }
 
-// Brain Tumor -----------------------
-.show-brain-tumor-filter {
-	.page-content li:not(.brain-tumor-publication) {
-		display: none;
-	}
+.show-brain-tumor-pub .brain-tumor-pub {
+	display: block;
 }
 
-// TBI -----------------------
-.show-tbi-filter {
-	.page-content li:not(.tbi-publication) {
-		display: none;
-	}
+.show-stroke-pub .stroke-pub {
+	display: block;
+}
+
+.show-tbi-pub .tbi-pub {
+	display: block;
+}
+
+.show-craniotomy-pub .craniotomy-pub {
+	display: block;
+}
+
+.show-tdcs-pub .tdcs-pub {
+	display: block;
+}
+
+.show-vision-pub .vision-pub {
+	display: block;
+}
+
+.show-language-pub .language-pub {
+	display: block;
+}
+
+.show-action-pub.action-pub {
+	display: block;
 }
 
 .stroke-publication p:after {
@@ -1011,6 +1036,13 @@ header {
 	textarea {
 		resize: vertical;
 	}
+}
+
+// Brain Survey ============================================================================
+.bs-iframe {
+	width: 100%;
+	height: 100vh;
+	border: 0;
 }
 
 // TBI ===================================================================================
