--- a/src/jade/_partials/_footer.jade
+++ b/src/jade/_partials/_footer.jade
@@ -3,6 +3,7 @@ include ./_svg
 mixin footer()
 	footer
 		.container
-			.copyright &copy; 2019 Brad Mahon of BrainSurvey, LLC
+			// .copyright &copy; 2019 Brad Mahon of BrainSurvey, LLC
+			| Join The Open Brain Project
 	script(src="../_js/openbrainproject.js")
 	+svg()
