--- a/src/jade/data-exchange/index.jade
+++ b/src/jade/data-exchange/index.jade
@@ -4,12 +4,12 @@ include ../_partials/_svg
 include ../_partials/_icon
 include ../_partials/_footer
 
-+head("Open Data Sets")
-body.discover-page.open-data-sets-page
++head("Data Exchange")
+body.discover-page.data-exchange-page
 	+header()
 	section.page-hero
 			.container
-				h1 Open Data Sets
+				h1 Data Exchange
 	main.page-content
 		section
 			.container
