--- a/src/jade/media/index.jade
+++ b/src/jade/media/index.jade
@@ -4,12 +4,12 @@ include ../_partials/_svg
 include ../_partials/_icon
 include ../_partials/_footer
 
-+head("In the News")
-body.in-the-news-page
++head("Media")
+body.media-page
 	+header()
 	section.page-hero
 		.container
-			h1 In the News
+			h1 Media
 	main.page-content
 		section
 			.container
