--- a/src/jade/resources-for-patients/index.jade
+++ b/src/jade/resources-for-patients/index.jade
@@ -5,7 +5,7 @@ include ../_partials/_icon
 include ../_partials/_footer
 
 +head("Resources for Patients")
-body.care-page.resources-for-patients-page
+body.learn-page.resources-for-patients-page
 	+header()
 	section.page-hero
 			.container
