--- a/src/jade/about/index.jade
+++ b/src/jade/about/index.jade
@@ -25,7 +25,7 @@ body.about-page
 							+icon("cycle-uarr")
 						.cycle-block.translate-cycle-block
 							h1 Translate
-							p  Understand about brain function into better outcomes for patients
+							p  Understanding into better outcomes for patients
 						.cycle-block.learn-cycle-block
 							h1 Learn
 							p  How brain injury affects sensory, cognitive and motor function
@@ -34,7 +34,7 @@ body.about-page
 				p.intro The Open Brain Project is a resource for patients, clinicians, scientists and students. It is designed to serve as a hub to facilitate research into how brain injury affects cognitive, sensory and motor function. It is open for anyone to join. We support posting and sharing of all research and clinical data that pertains to human neuropsychology, broadly construed.
 				p Join the Open Brain Project to receive information about how to post content on the website. 
 				p The Open Brain Project was established with resources from the laboratory of Dr. Brad Mahon at Carnegie Mellon University, as well as resources from the Department of Neurosurgery at the University of Rochester.
-				p The Open Brain Project will be applying for 501c3 (non-profit) status in early 2020. If you would like to support the Open Brain Project, please contact Dr. Brad Mahon at:  OpenBrainProj@gmail.org
+				p The Open Brain Project will be applying for 501c3 (non-profit) status in early 2020. If you would like to support the Open Brain Project, please contact Dr. Brad Mahon at: <a href="mailto:OpenBrainProj@gmail.com">OpenBrainProj@gmail.com</a>
 				p OpenBrainProject.org and affiliated sites are registered to Brad Mahon of Brain Survey LLC. 
 				
 	+footer()
