--- a/src/jade/media/index.jade
+++ b/src/jade/media/index.jade
@@ -25,7 +25,7 @@ body.media-page
 					* [Facebook Seeker: This music teacher is undergoing brain surgery while playing the saxophone](http://www.facebook.com/SeekerMedia/videos/10155327361953387/)
 					* [NBC Health News: Musician plays sax during brain tumor surgery](http://www.nbcnews.com/health/health-news/musician-plays-sax-during-brain-tumor-surgery-n796971)
 					* [New Atlas: Mid-surgery sax solo sounds success for retaining musical ability](http://newatlas.com/patient-plays-saxophone-brain-surgery/51094/)
-				h3 Predicting Vision Recovery After Brain Tumor Removal
+				h3 Predicting vision recovery after brain tumor removal
 				:marked
 					* [URMC: New imaging technique helps predict how vision recovers after brain tumor removal](http://www.rochester.edu/newscenter/myelin-linked-to-speedy-recovery-of-human-visual-system-after-tumor-removal-82512/)
 					* [Futurity: Images show how brain heals itself after tumor](http://www.futurity.org/pituitary-brain-tumor-vision-817882/)
