--- a/src/jade/_partials/_nav.jade
+++ b/src/jade/_partials/_nav.jade
@@ -62,4 +62,5 @@ mixin nav()
 								span Media
 						li.nav-item.nav-group.join-group
 							a.nav-link.main-nav-link(href="/join") 
+								<svg class="icon icon-join"><use xlink:href="#join"></use></svg>
 								span Join
