--- a/src/jade/data-exchange/index.jade
+++ b/src/jade/data-exchange/index.jade
@@ -10,6 +10,7 @@ body.discover-page.data-exchange-page
 	section.page-hero
 			.container
 				h1 Data Exchange
+				p <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post your content here. 
 	main.page-content
 		section
 			.container
