--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -11,11 +11,12 @@ body.home
 		section.mission-section
 			.wrapper
 				.container.mission-container
-					p The Open Brain Project is a:
-					p Consortium of scientists and clinicians dedicated to advancing knowledge about brain injury
-					p Meta-analytic engine to understand how focal brain lesions cause sensory, cognitive and motor function
-					p A hub to connect patients and their families with resources to manage their condition
-					p A forum for scientists to share research papers, data, and experimental protocols related to neuropsychological research
+					p The Open Brain Project is a consortium of scientists and clinicians dedicated to advancing knowledge about brain injury. 
+					//- p The Open Brain Project is a:
+					//- p Consortium of scientists and clinicians dedicated to advancing knowledge about brain injury
+					//- p Meta-analytic engine to understand how focal brain lesions cause sensory, cognitive and motor function
+					//- p A hub to connect patients and their families with resources to manage their condition
+					//- p A forum for scientists to share research papers, data, and experimental protocols related to neuropsychological research
 		section.featured-content-section
 			.container
 				h1 Mapping language ability during awake brain surgery
