--- a/src/jade/join/index.jade
+++ b/src/jade/join/index.jade
@@ -10,7 +10,7 @@ body.join-page
 	section.page-hero
 		.container
 			h1 Join
-			p Join the Open Brain Project to contribute data or receive updates
+			p Join the Open Brain Project to receive updates or contribute data
 	main.page-content
 		section
 			.container.flex-form-container
@@ -73,5 +73,5 @@ body.join-page
 							input(type="checkbox", id="upload_data", name="i_am_a")
 							| Upload data from my helmet-worn accelerometer
 					section
-						button.button.blue-gradient(type="submit") Send
+						button.button.green-gradient(type="submit") Join
 	+footer()
