--- a/src/jade/media/index.jade
+++ b/src/jade/media/index.jade
@@ -9,8 +9,10 @@ body.media-page
 	+header()
 	section.page-hero
 		.container
-			h1 Media
-	main.page-content
+			h1 Media 
+			p 
+				| The latest news from The Open Brain Project. <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post popular press coverage relevant to the mission of the Open Brain Project.
+main.page-content
 		section
 			.container
 				h3 Vision recovery after stroke affecting visual cortext
