--- a/src/jade/publications/index.jade
+++ b/src/jade/publications/index.jade
@@ -11,6 +11,7 @@ body.publications-page
 		section.page-hero
 			.container
 				h1 Publications
+				p <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post popular press coverage relevant to the mission of the Open Brain Project.
 				p.filter-publications
 					| Filter publications related to:
 					.filters-list
