--- a/src/jade/video-archive/index.jade
+++ b/src/jade/video-archive/index.jade
@@ -10,7 +10,7 @@ body.learn-page.video-archive-page
 	section.page-hero
 			.container
 				h1 Video Archive
-				p The Open Brain Project is gathering informative videos that illustrate neuropsychological phenomena. Join the Open Brain Project to receive information about how to post your content here.
+				p The Open Brain Project is gathering informative videos that illustrate neuropsychological phenomena. <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post your content here.
 	main.page-content
 		section.videos-section
 			.container.videos-list
