--- a/src/jade/publications/index.jade
+++ b/src/jade/publications/index.jade
@@ -12,7 +12,7 @@ body.publications-page
 			.container
 				h1 Publications
 				p <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post popular press coverage relevant to the mission of the Open Brain Project.
-				p.filter-publications
+				.filter-publications
 					| Filter publications related to:
 					.filters-list
 						button.filter-button(data-filter="brain-tumor")
