--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,14 +18,12 @@ $light_white: rgba($white, 0.1);
 $blue_link: #147ace;
 $purple_link: #9d13c1;
 
-$blue: #2196f3;
-$light_blue: #00bcd4;
-$green: #37b055;
-$orange: #ffa726;
-$pink: #f06292;
-$purple: #ba68c8;
-$yellow: #ffeb3b;
-$gray: #606670;
+$blue: #0670c4;
+$turquoise: #0ba2b5;
+$orange: #d17c00;
+$green: #2f7d33;
+$purple: #673ab7;
+$gray: #3a4a52;
 
 $mobile: 20rem;
 $tablet: 40rem;
@@ -41,37 +39,70 @@ $desktop: 60rem;
 	background-image: linear-gradient(
 		to bottom right,
 		rgba($color, 0),
-		adjust-hue(shade($color, 25%), -15%)
+		adjust-hue(shade($color, 25%), -25%)
+	);
+}
+
+.blue-gradient {
+	background-color: $blue;
+	background-image: linear-gradient(
+		to bottom right,
+		transparent,
+		tint(adjust-hue($blue, 20deg), 40deg)
+	);
+}
+
+.turquoise-gradient {
+	background-color: $turquoise;
+	background-image: linear-gradient(
+		transparent,
+		tint(adjust-hue($turquoise, -15deg), 10%)
 	);
 }
 
 .orange-gradient {
-	@include gradient($orange);
+	background-color: $orange;
+	background-image: linear-gradient(
+		to bottom right,
+		transparent,
+		adjust-hue($orange, 8deg)
+	);
 }
+
 .green-gradient {
-	@include gradient($green);
+	background-color: $green;
+	background-image: linear-gradient(
+		to bottom right,
+		transparent,
+		shade(adjust-hue($green, -40deg), 20%)
+	);
 }
-.light-blue-gradient {
-	@include gradient($light_blue);
-}
-.blue-gradient {
-	@include gradient($blue);
-}
-.pink-gradient {
-	@include gradient($pink);
-}
-.yellow-gradient {
-	@include gradient($yellow);
-}
+
 .purple-gradient {
-	@include gradient($purple);
+	background-color: $purple;
+	background-image: linear-gradient(
+		to bottom right,
+		transparent,
+		adjust-hue($purple, 15deg)
+	);
 }
+
 .gray-gradient {
-	@include gradient($gray);
+	background-color: $gray;
+	background-image: linear-gradient(
+		to bottom right,
+		transparent,
+		tint(adjust-hue($gray, 30deg), 10%)
+	);
 }
+
 .black-gradient {
-	@include gradient(#555);
-	color: $white;
+	background-color: $black;
+	background-image: linear-gradient(
+		to bottom right,
+		transparent,
+		lighten($black, 8%)
+	);
 }
 
 :root {
@@ -139,6 +170,7 @@ section {
 
 	.page-content > &:last-child {
 		padding: var(--large) 0 0;
+		border-bottom: 0;
 	}
 }
 
@@ -186,10 +218,6 @@ p {
 
 a {
 	color: $blue_link;
-
-	&:visited {
-		color: $purple_link;
-	}
 
 	&[href="/join"] {
 		.icon-join {
@@ -284,10 +312,7 @@ header {
 	}
 
 	a {
-		&,
-		&:visited {
-			color: $black;
-		}
+		color: $black;
 	}
 
 	.container {
@@ -444,10 +469,6 @@ header {
 			}
 		}
 
-		&:visited {
-			color: $white;
-		}
-
 		&:not(.main-nav-link):hover {
 			background: $black;
 		}
@@ -465,7 +486,7 @@ header {
 }
 
 .discover-page .discover-group .main-nav-link {
-	box-shadow: inset 0 var(--small) $light_blue;
+	box-shadow: inset 0 var(--small) $turquoise;
 	background: $black;
 }
 .translate-page .translate-group .main-nav-link {
@@ -501,7 +522,7 @@ header {
 	@extend .gray-gradient;
 
 	.discover-page & {
-		@extend .light-blue-gradient;
+		@extend .turquoise-gradient;
 	}
 	.translate-page & {
 		@extend .orange-gradient;
@@ -524,15 +545,12 @@ header {
 		margin: var(--medium) 0 0;
 
 		@media (min-width: $desktop) {
-			max-width: 70%;
+			max-width: $tablet;
 		}
 	}
 
 	a {
-		&,
-		&:visited {
-			color: $white;
-		}
+		color: $white;
 	}
 
 	& + .page-content {
@@ -636,10 +654,7 @@ header {
 	display: block;
 	text-decoration: none;
 
-	&,
-	&:visited {
-		color: $black;
-	}
+	color: $black;
 }
 
 .partner-name {
@@ -777,41 +792,30 @@ header {
 	}
 }
 
-// Publications page ===================================================================
-.publications-page {
-	.page-hero p {
-		max-width: initial;
-	}
-	li {
-		p:after {
-			font-size: 0.8rem;
-			padding: 0.1rem var(--small);
-			margin: 0 0 0 var(--small);
-			border-radius: var(--radius);
-			pointer-events: none;
-			background: $light_gray;
-		}
-	}
+// Publications page =====================================================================
+.filter-publications {
+	border-radius: var(--radius);
+	padding: var(--large);
+	margin-top: var(--large);
+	margin-bottom: calc(var(--extra-large) * -1);
+	background: $lighter_black;
+	color: $white;
 }
-
+.filters-list {
+	margin: var(--medium) 0 0;
+}
 .filter-button {
 	font-size: 0.8em;
 	font-weight: bold;
 	border: 0;
-	background: rgba($black, 0.3);
 	color: $white;
-	border: 0;
+	border: 1px solid $gray;
 	border-radius: var(--radius);
 	cursor: pointer;
 	padding: var(--small) var(--medium);
-	margin: var(--medium) 0 0;
 
 	&:hover {
-		background: rgba($black, 0.6);
-	}
-
-	&:focus {
-		outline: 0;
+		border-color: $white;
 	}
 
 	.icon-close {
@@ -820,6 +824,7 @@ header {
 
 	&.is-filtering {
 		background: $white;
+		border-color: $white;
 		color: $black;
 
 		.icon-close {
@@ -852,17 +857,32 @@ header {
 	display: list-item;
 }
 
-.stroke-publication p:after {
-	content: "Stroke";
-}
-.brain-tumor-publication p:after {
-	content: "Brain Tumor";
-}
-.tbi-publication p:after {
-	content: "TBI";
-}
+// .brain-tumor-pub:after {
+// 	content: "Brain Tumor";
+// }
+// .stroke-pub:after {
+// 	content: "Stroke";
+// }
+// .tbi-pub:after {
+// 	content: "TBI";
+// }
+// .craniotomy-pub:after {
+// 	content: "Craniotomy";
+// }
+// .tdcs-pub:after {
+// 	content: "tDCS";
+// }
+// .vision-pub:after {
+// 	content: "Vision";
+// }
+// .language-pub:after {
+// 	content: "Language";
+// }
+// .action-pub:after {
+// 	content: "Action";
+// }
 
-// Form ===================================================================
+// Form ==================================================================================
 .flex-form-container {
 	@media (min-width: $tablet) {
 		display: flex;
@@ -873,10 +893,6 @@ header {
 
 .form-aside {
 	flex: 1;
-
-	p {
-		font-size: 1em;
-	}
 }
 
 .form {
@@ -1059,7 +1075,7 @@ header {
 }
 
 .discover-cycle-block {
-	@extend .light-blue-gradient;
+	@extend .turquoise-gradient;
 }
 .translate-cycle-block {
 	@extend .orange-gradient;
@@ -1092,8 +1108,8 @@ header {
 
 // Footer ================================================================================
 footer {
-	text-align: center;
 	opacity: 0.7;
+	border-top: thin solid $light_gray;
 
 	@media (min-width: $tablet) {
 		text-align: left;
