--- a/src/jade/_partials/_header.jade
+++ b/src/jade/_partials/_header.jade
@@ -9,7 +9,11 @@ mixin header()
 					+icon("brain")
 					.site-logo-text
 						h1 The Open Brain Project
-						h2 Translating discovery into care
+						h2.tagline 
+							.tagline-item Translating discovery into care
+							.tagline-item Learn, discover, translate
+							.tagline-item Better prediction through understanding  
+							.tagline-item Big data, one brain at a time
 			.right-header-content
 				a.header-social-link(href="https://twitter.com", aria-label="Open Brain Project on Twitter")
 					+icon("twitter")
