--- a/src/jade/join/index.jade
+++ b/src/jade/join/index.jade
@@ -19,7 +19,7 @@ body.join-page
 					p It is designed to serve as a hub to facilitate research into how brain injury affects cognitive, sensory and motor function. 
 					p If you have data, publications, news releases, patient videos, or experimental resources to contribute, or if you would like to sign up to receive our newsletter, please enter your email address. 
 					p We do not share email addresses with any third party, and will contact you with additional information according to the options you select. 
-				form.form(name="join", method="POST", data-netlify="true", action="/contribute-data-or-publications/success")
+				form.form(name="join", method="POST", data-netlify="true", action="/join/success")
 					section.split
 						label
 							| First Name:
