--- a/src/jade/join/success/index.jade
+++ b/src/jade/join/success/index.jade
@@ -5,12 +5,12 @@ include ../../_partials/_icon
 include ../../_partials/_footer
 
 +head("Successful submission")
-body.join-page.contribute-page
+body.join-page
 	+header()
 	section.page-hero
 		.container
-			h1 Contribute
-			p Contribute data or publications to The Open Brain Project
+			h1 Join
+			p Thank you for joining the Open Brain Project
 	main.page-content
 		section
 			.container
